Fixed top border clipping issue

--- a/CSS/Sketch/CSS/images.css
+++ b/CSS/Sketch/CSS/images.css
@@ -18,5 +18,6 @@ img {
 	border: 0.15em solid #222;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	display: block;
 }
 .borderOffsetImg {padding: 0.3em;}
